--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,22 +3,22 @@
 # this file is intended for interactive development only
 
 services:
-  autopatchpubsub: # simple echo server for development only
-    networks:
-      - autopatch-llm_autopatch-docker-network
-    build: ./src/autopatchpubsub
-    container_name: autopatchpubsub
-    working_dir: /app
+  # autopatchpubsub: # simple echo server for development only
+  #   networks:
+  #     - autopatch-llm_autopatch-docker-network
+  #   build: ./src/autopatchpubsub
+  #   container_name: autopatchpubsub
+  #   working_dir: /app
   autopatch-fuzzing-service:
     networks:
       - autopatch-llm_autopatch-docker-network
     build: ./src/fuzzing-service
     container_name: autopatch-fuzzing-service
-    user: "${UID:-1000}:${GID:-1000}"
+    # user: "${UID:-1000}:${GID:-1000}"
     environment:
       - FUZZ_SVC_CONFIG=/app/config/config.json
-      - UID=${UID:-1000}
-      - GID=${GID:-1000}
+      # - UID=${UID:-1000}
+      # - GID=${GID:-1000}
     volumes:
       - ./src/fuzzing-service/config:/app/config:ro
       - ./src/fuzzing-service/log:/app/log:rw
