--- a/src/patch-evaluation-service/config/config.json
+++ b/src/patch-evaluation-service/config/config.json
@@ -3,13 +3,13 @@
     "appname": "autopatch.patch-evaluation-service",
     "logging_config" : "/app/config/logging-config.json",
     "crashes_events":"/app/crash_events",
-    "patch_eval_results":"/app/data",
+    "patch_eval_results_full_path":"/app/data",
     "patched_codes_path":"/app/patched_codes",
-    "executables_path":"/app/bin/executables",
+    "executables_full_path":"/app/bin/executables",
     "compiler_tool_full_path": "/usr/bin/gcc",
     "compiler_warning_flags":"-Wall -Wextra -Wformat -Wshift-overflow -Wcast-align -Wstrict-overflow -fstack-protector-strong",
     "compiler_feature_flags": "-O1 -g -o",
-    "temp_crashes_path":"/app/temp_crashes_files",
+    "temp_crashes_full_path":"/app/temp_crashes_files",
     "compile_timeout":10,
     "run_timeout":10,
     "message_broker_host": "mosquitto",
