--- a/src/fuzzing-service/Dockerfile
+++ b/src/fuzzing-service/Dockerfile
@@ -12,13 +12,9 @@ RUN apt-get update && \
         python3-pip=24.0+dfsg-1ubuntu1.1 \
         gcc=4:13.2.0-7ubuntu1 \
         gcc-multilib=4:13.2.0-7ubuntu1 \
-        afl++ \
+        afl++=4.09c-1ubuntu3 \
         libc6-dev-i386=2.39-0ubuntu8.4 && \
     rm -rf /var/lib/apt/lists/*
-
-# Create a system group and user named "appuser"
-# RUN groupadd -r appuser && \
-#     useradd -r -g appuser appuser
 
 COPY requirements.txt .
 
@@ -27,14 +23,8 @@ COPY autopatchdatatypes-0.4.1-py3-none-any.whl .
 COPY autopatchpubsub-0.4.1-py3-none-any.whl .
 
 RUN pip install --break-system-packages --no-cache-dir -r requirements.txt
-# this is for layered builds
-# RUN pip install --break-system-packages --user --no-cache-dir -r requirements.txt
 
 COPY fuzz_svc_config.py /app/fuzz_svc_config.py
 COPY fuzzing_service.py /app/fuzzing_service.py
-
-# RUN chown -R appuser:appuser /app
-
-# USER appuser
 
 CMD ["python3", "fuzzing_service.py"]
