feature/integrate patch eval (#75)
* WIP: use shared libraries for patch eval

* work-in-progress: integrate patch eval component

* Update pyproject.toml

update to v0.4.0

* Update pyproject.toml

update to v0.4.0

* Update pyproject.toml

update to v0.4.0

* Update requirements.txt

update to v0.4.0

* Update Dockerfile

update to v0.4.0

* Update config.json

update to v0.4.0

* Update pyproject.toml

update to v0.4.0

* Update requirements.txt

update to v0.4.0

* feature(patch-eval): add simple MQTT consume support to patch eval component

* patch-eval(integration): WIP patch eval is now supports async callback from the MQTT broker to process incoming events in a background daemon thread

* feature(fuzzing): update the fuzzing service from afl2.52b to afl++

* feature(AFL++): update fuzzing service component to work with AFL++

* feature(integrate-patch-eval): WIP patch eval is now event driven but looks like has a race condition on multiple threads running the executable for exaluation at once, will resolve tomorrow

* patch-eval integration: made patch eval thread safe

* additional testing reveals the patch eval component is not hanging but rather the data format coming from the fuzzing service for CrashDetail is not matching the data format used in interactive testing

* bugfix(json_format): use cloudevent library function to create proper json string for event instead of raw string.  Singlequotes wer causing issues on the consuming side

* use strong typing

* fix null access when file input is not used

* integrate-patch-eval: resolve some runtime issues with running subprocesses in patch eval

* add short wait to fuzzing service before polling to check if the fuzzer subprocess started

* move old patch eval tests to achive status

* linter suggestiosn

* refactor(msgbrokerclient): remove unused code

* refactor(patch-eval): make patch eval more unit test compatible

* refactor(fuzz-svc) remove duplicate code

* feature(patch-eval): add some automated te

--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -51,70 +51,63 @@ jobs:
       - name: Install Test Harness dependencies
         run: |
           pip install pytest==8.3.4 pytest-cov==6.0.0 pytest-asyncio==0.25.3
-      - name: Create fuzzing component JSON config file
-        run: |
-          cat <<EOF > fuzzing-service-config.json
-          {
-              "version": "CITestonlyversion",
-              "appname": "autopatch.fuzzing-service",
-              "logging_config" : "${{ github.workspace }}/src/fuzzing-service/config/logging-config.json",
-              "concurrency_threshold": 10,
-              "message_broker_host": "mosquitto",
-              "message_broker_port": 1883,
-              "message_broker_protocol": "mqtt",
-              "fuzz_svc_output_topic": "autopatch/crash_detail",
-              "fuzz_svc_input_codebase_path": "${{ github.workspace }}/assets/input_codebase",
-              "fuzz_svc_output_path": "${{ github.workspace }}/data/fuzz_svc_output",
-              "compiler_warning_flags": "-Wall -Wextra -Wformat -Wshift-overflow -Wcast-align -Wstrict-overflow",
-              "compiler_feature_flags": "-m32 -fno-stack-protector -O1 -fsanitize=address",
-              "fuzzer_tool_name": "afl",
-              "fuzzer_tool_timeout_seconds": 120,
-              "fuzzer_tool_version": "2.52b",
-              "afl_tool_full_path": "${{ github.workspace }}/bin/afl-2.52b/afl-fuzz",
-              "afl_tool_seed_input_path": "${{ github.workspace }}/assets/seed_input",
-              "afl_tool_output_path": "${{ github.workspace }}/src/fuzzing-service/data/afl_tool_output",
-              "afl_tool_child_process_memory_limit_mb": 6000,
-              "afl_tool_compiled_binary_executables_output_path": "${{ github.workspace }}/bin/executables_afl",
-              "afl_compiler_tool_full_path": "${{ github.workspace }}/bin/afl-2.52b/afl-gcc",
-              "iconv_tool_timeout": 120
-          }
-          EOF
-      - name: Create patch evaluation component JSON config file
-        run: |
-          cat <<EOF > patch-evaluation-service-config.json
-          {
-              "version": "CITestonlyversion",
-              "appname": "autopatch.patch-evaluation-service",
-              "logging_config" : "${{ github.workspace }}/src/patch-evaluation-service/logging-config.json",
-              "crashes_events":"${{ github.workspace }}/src/patch-evaluation-service/crash_events",
-              "patch_eval_results":"${{ github.workspace }}/src/patch-evaluation-service/data",
-              "patched_codes_path":"${{ github.workspace }}/src/patch-evaluation-service/patched_codes",
-              "executables_path":"${{ github.workspace }}/src/patch-evaluation-service/bin/executables",
-              "compiler_warning_flags":"-Wall -Wextra -Wformat -Wshift-overflow -Wcast-align -Wstrict-overflow -fstack-protector-strong",
-              "temp_crashes_path":"${{ github.workspace }}src/patch-evaluation-service/temp_crashes_files",
-              "compile_timeout":10,
-              "run_timeout":10,
-              "message_broker_host": "mosquitto",
-              "message_broker_port": 1883,
-              "autopatch_crash_detail_input_topic": "autopatch/crash_detail"
-          }
-          EOF
-      - name: Verify Fuzzing Service Config JSON file
-        run: |
-          cat ${{ github.workspace }}/fuzzing-service-config.json
-      - name: Verify Patch Evaluation Service Config JSON file
-        run: |
-          cat ${{ github.workspace }}/patch-evaluation-service-config.json
+      # - name: Create fuzzing component JSON config file
+      #   run: |
+      #     cat <<EOF > fuzzing-service-config.json
+      #     {
+      #         "version": "CITestonlyversion",
+      #         "appname": "autopatch.fuzzing-service",
+      #         "logging_config" : "${{ github.workspace }}/src/fuzzing-service/config/logging-config.json",
+      #         "concurrency_threshold": 10,
+      #         "message_broker_host": "mosquitto",
+      #         "message_broker_port": 1883,
+      #         "message_broker_protocol": "mqtt",
+      #         "fuzz_svc_output_topic": "autopatch/crash_detail",
+      #         "fuzz_svc_input_codebase_path": "${{ github.workspace }}/assets/input_codebase",
+      #         "fuzz_svc_output_path": "${{ github.workspace }}/data/fuzz_svc_output",
+      #         "compiler_warning_flags": "-Wall -Wextra -Wformat -Wshift-overflow -Wcast-align -Wstrict-overflow",
+      #         "compiler_feature_flags": "-m32 -fno-stack-protector -O1 -fsanitize=address",
+      #         "fuzzer_tool_name": "afl",
+      #         "fuzzer_tool_timeout_seconds": 120,
+      #         "fuzzer_tool_version": "2.52b",
+      #         "afl_tool_full_path": "${{ github.workspace }}/bin/afl-2.52b/afl-fuzz",
+      #         "afl_tool_seed_input_path": "${{ github.workspace }}/assets/seed_input",
+      #         "afl_tool_output_path": "${{ github.workspace }}/src/fuzzing-service/data/afl_tool_output",
+      #         "afl_tool_child_process_memory_limit_mb": 6000,
+      #         "afl_tool_compiled_binary_executables_output_path": "${{ github.workspace }}/bin/executables_afl",
+      #         "afl_compiler_tool_full_path": "${{ github.workspace }}/bin/afl-2.52b/afl-gcc",
+      #         "iconv_tool_timeout": 120
+      #     }
+      #     EOF
+      # - name: Create patch evaluation component JSON config file
+      #   run: |
+      #     cat <<EOF > patch-evaluation-service-config.json
+      #     {
+      #         "version": "CITestonlyversion",
+      #         "appname": "autopatch.patch-evaluation-service",
+      #         "logging_config" : "${{ github.workspace }}/src/patch-evaluation-service/logging-config.json",
+      #         "crashes_events":"${{ github.workspace }}/src/patch-evaluation-service/crash_events",
+      #         "patch_eval_results":"${{ github.workspace }}/src/patch-evaluation-service/data",
+      #         "patched_codes_path":"${{ github.workspace }}/src/patch-evaluation-service/patched_codes",
+      #         "executables_path":"${{ github.workspace }}/src/patch-evaluation-service/bin/executables",
+      #         "compiler_warning_flags":"-Wall -Wextra -Wformat -Wshift-overflow -Wcast-align -Wstrict-overflow -fstack-protector-strong",
+      #         "temp_crashes_path":"${{ github.workspace }}src/patch-evaluation-service/temp_crashes_files",
+      #         "compile_timeout":10,
+      #         "run_timeout":10,
+      #         "message_broker_host": "mosquitto",
+      #         "message_broker_port": 1883,
+      #         "autopatch_crash_detail_input_topic": "autopatch/crash_detail"
+      #     }
+      #     EOF
+      # - name: Verify Fuzzing Service Config JSON file
+      #   run: |
+      #     cat ${{ github.workspace }}/fuzzing-service-config.json
+      # - name: Verify Patch Evaluation Service Config JSON file
+      #   run: |
+      #     cat ${{ github.workspace }}/patch-evaluation-service-config.json
       - name: Run tests with coverage
-        env:
-          FUZZ_SVC_CONFIG: ${{ github.workspace}}/fuzzing-service-config.json
-          PATCH_EVAL_SVC_CONFIG: ${{ github.workspace}}/patch-evaluation-service-config.json
         run: |
           task test-with-coverage
-      - name: Clean up temporary test config files
-        run: |
-          rm ${{ github.workspace }}/fuzzing-service-config.json
-          rm ${{ github.workspace }}/patch-evaluation-service-config.json
       - name: Publish coverage report
         uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 # v4.6.1
         with:
