--- a/src/patch-evaluation-service/config/config.json
+++ b/src/patch-evaluation-service/config/config.json
@@ -1,15 +1,15 @@
 {
-    "version": "0.3.0-alpha",
+    "version": "0.4.1-alpha",
     "appname": "autopatch.patch-evaluation-service",
     "logging_config" : "/app/config/logging-config.json",
-    "crashes_events":"/app/crash_events",
-    "patch_eval_results":"/app/data",
+    "patch_eval_results_full_path":"/app/data",
     "patched_codes_path":"/app/patched_codes",
-    "executables_path":"/app/bin/executables",
+    "executables_full_path":"/app/bin/executables",
+    "compiler_tool_full_path": "/usr/bin/gcc",
     "compiler_warning_flags":"-Wall -Wextra -Wformat -Wshift-overflow -Wcast-align -Wstrict-overflow -fstack-protector-strong",
-    "temp_crashes_path":"/app/temp_crashes_files",
-    "compile_timeout":10,
-    "run_timeout":10,
+    "compiler_feature_flags": "-O1 -g -o",
+    "compile_timeout": 10,
+    "run_timeout": 10,
     "message_broker_host": "mosquitto",
     "message_broker_port": 1883,
     "autopatch_crash_detail_input_topic": "autopatch/crash_detail"
