--- a/src/patch-evaluation-service/pyproject.toml
+++ b/src/patch-evaluation-service/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = 'autopatch.patch-evaluation-service'
-version = '0.3.0'
+version = '0.4.0'
 requires-python = '>=3.12.3'
 readme = 'README.md'
 authors = [
@@ -14,3 +14,13 @@ build-backend = 'setuptools.build_meta'
 
 [tool.isort]
 profile = 'black'
+
+# optional dependencies (e.g., for development)
+[project.optional-dependencies]
+dev = [
+    'isort',
+    'black',
+    'flake8',
+    'pytest',
+    'pytest-cov'
+]
