--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,6 +24,9 @@
 		"ghcr.io/devcontainers/features/git:1": {
 			"ppa": true
 		},
+		"ghcr.io/devcontainers/features/java:1": {
+			"version": "21"
+		},
 		"ghcr.io/devcontainers/features/github-cli:1": {
 			"installDirectlyFromGitHubRelease": true
 		},
@@ -84,7 +87,7 @@
 		"--network", "autopatch-llm_autopatch-docker-network"
 	],
 	"postCreateCommand": "task install-devtools",
-	"postStartCommand": "fastfetch && black --version && coverage --version && echo -n 'isort version: ' && isort --version-number",
+	"postStartCommand": "fastfetch && black --version && coverage --version && echo -n 'isort version: ' && isort --version-number && java --version",
 	"workspaceMount": "source=${localWorkspaceFolder},target=/workspace/AutoPatch-LLM,type=bind",
 	"workspaceFolder": "/workspace/AutoPatch-LLM"
 }
