feature(llm-dispatch): simple test with static program, LLMs now attempt to generate patch files

--- a/src/llm-dispatch/config/config.json
+++ b/src/llm-dispatch/config/config.json
@@ -2,8 +2,8 @@
     "appName": "LLM Dispatch",
     "appVersion": "0.1.0",
     "appDescription": "A system for managing and dispatching requests to various language models.",
-    "systemprompt": "You are a helpful assistant that can process and respond to requests using various language models. Your task is to manage the dispatching of requests to the appropriate model based on the input provided.",
-    "userprompt": "You are a user interacting with the LLM Dispatch system. You can send requests to various language models and receive responses. Please provide your request in a clear and concise manner.",
+    "systemprompt_full_patch": "/workspace/AutoPatch-LLM/src/llm-dispatch/data/prompts/system_prompt.txt",
+    "userprompt_full_path": "/workspace/AutoPatch-LLM/src/llm-dispatch/data/prompts/user_prompt.txt",
     "default_model": "gpt-3.5-turbo",
     "default_api_provider": "openai",
     "default_in_memory_provider": "openai",
