--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,7 @@
 FROM mcr.microsoft.com/devcontainers/base:noble AS base
 
 ENV DEBIAN_FRONTEND=noninteractive \
+    CUSTOM_VERSION=4.0.247 \
     PYTHONUNBUFFERED=1
 
 RUN rm -f /etc/apt/apt.conf.d/docker-clean && \
@@ -13,8 +14,11 @@ RUN rm -f /etc/apt/apt.conf.d/docker-clean && \
     apt-get update && apt-get -y install --no-install-recommends \
         fastfetch && \
     apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/* && \
+    #export CUSTOM_VERSION=4.0.247 && \
     wget https://github.com/joernio/joern/releases/download/v4.0.247/joern-install.sh && \
     chmod +x ./joern-install.sh && \
     sudo ./joern-install.sh
+    
+USER root:root
+#USER vscode:vscode
 
-USER vscode:vscode
