--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -7,6 +7,9 @@ includes:
    llm-dispatch:
       taskfile: ./src/llm-dispatch/Taskfile.yml
       dir: ./src/llm-dispatch
+   code-property-graph-generator:
+      taskfile: ./src/code-property-graph-generator/Taskfile.yml
+      dir: ./src/code-property-graph-generator
    autopatchdatatypes:
       taskfile: ./src/autopatchdatatypes/Taskfile.yml
       dir: ./src/autopatchdatatypes
@@ -88,6 +91,7 @@ tasks:
         - task: build-install-facades
         - task: fuzzing-service:install
         - task: patch-evaluation-service:install
+        - task: code-property-graph-generator:install
         # - task llm-dispatch:install
         # - task patch-request-generator-component:install
         # - task main:install
