feature(llm-dispatch): WIP refactoring improvements

--- a/src/llm-dispatch/config/config.json
+++ b/src/llm-dispatch/config/config.json
@@ -1,39 +1,25 @@
 {
-    "appName": "LLM Dispatch",
+    "appName": "autopatch.llm-dispatch",
     "appVersion": "0.1.0",
     "appDescription": "A system for managing and dispatching requests to various language models.",
-    "systemprompt_full_patch": "/workspace/AutoPatch-LLM/src/llm-dispatch/data/prompts/system_prompt.txt",
-    "userprompt_full_path": "/workspace/AutoPatch-LLM/src/llm-dispatch/data/prompts/user_prompt.txt",
+    "system_prompt_full_path": "/workspace/AutoPatch-LLM/src/llm-dispatch/data/prompts/system_prompt.txt",
+    "user_prompt_full_path": "/workspace/AutoPatch-LLM/src/llm-dispatch/data/prompts/user_prompt.txt",
+    "logging_config" : "/workspace/AutoPatch-LLM/src/llm-dispatch/config/dev-logging-config.json",
     "default_model": "gpt-3.5-turbo",
     "default_api_provider": "openai",
     "default_in_memory_provider": "openai",
-    "default_model_settings": {
-        "max_tokens": 4096,
-        "temperature": 0.7,
-        "top_p": 1,
-        "frequency_penalty": 0,
-        "presence_penalty": 0,
-        "stop": null
-    },
-    "mqtt" : {
-        "enabled": true,
-        "broker_host": "mqtt",
-        "broker_port": 1883,
-        "topics": {
-            "request": "llm/dispatch/request",
-            "response": "llm/dispatch/response",
-            "error": "llm/dispatch/error"
-        },
-        "client_id": "autopatch-llm-dispatch-client",
-        "username": null,
-        "password": null,
-        "keepalive": 60,
-        "tls": {
-            "enabled": false,
-            "ca_certs": null,
-            "certfile": null,
-            "keyfile": null
-        }
+    "default_max_tokens": 4096,
+    "default_temperature": 0.7,
+    "default_top_p": 1,
+    "default_frequency_penalty": 0,
+    "default_presence_penalty": 0,
+    "message_broker_client_id": "autopatch-llm-dispatch-client",
+    "message_broker_host": "mqtt",
+    "message_broker_port": 1883,
+    "message_broker_topics": {
+        "request": "llm/dispatch/request",
+        "response": "llm/dispatch/response",
+        "error": "llm/dispatch/error"
     },
     "api": {
         "base_url": "https://api.llm-dispatch.com/v1",
@@ -41,25 +27,15 @@
         "retry_attempts": 3,
         "retry_delay": 2000
     },
-    "logging": {
-        "level": "info",
-        "log_file": "/var/log/llm-dispatch.log",
-        "log_format": "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
-    },
-    "cache": {
-        "enabled": true,
-        "cache_dir": "/var/cache/llm-dispatch",
-        "cache_expiration": 3600
-    },
-    "model_router": {
-        "enabled": true,
-        "fallback_model": "google/gemini-2.5-pro-exp-03-25:free",
-        "max_concurrent_requests": 5,
-        "base_url": "https://openrouter.ai/api/v1",
-        "timeout": 30,
-        "retry_attempts": 3,
-        "retry_delay": 2000
-    },
+    "model_router_base_url": "https://openrouter.ai/api/v1",
+    "model_router_fallback_model": "google/gemini-2.5-pro-exp-03-25:free",
+    "model_router_max_concurrent_requests": 5,
+    "model_router_retry_attempts": 3,
+    "model_router_timeout_ms": 3000,
+    "model_router_retry_delay_ms": 50,
+    "cache_enabled": false,
+    "cache_dir": "/workspace/AutoPatch-LLM/src/llm-dispatch/data/cache",
+    "cache_expiration": 3600,
     "models": [
         {
             "gpt-3.5-turbo": {
@@ -73,15 +49,11 @@
                 "frequency_penalty": 0,
                 "presence_penalty": 0,
                 "stop": null,
-                "api_provider": {
-                    "api_key": "your_openai_api_key",
-                    "api_base": "https://api.openai.com/v1",
-                    "api_type": "openai"
-                },
-                "in_memory_provider": {
-                    "model_path": "/path/to/gpt-3.5-turbo/model",
-                    "api_type": "openai"
-                }
+                "api_key": "your_openai_api_key",
+                "api_base": "https://api.openai.com/v1",
+                "api_type": "openai",
+                "is_in_memory": false,
+                "in_memory_model_path": "/path/to/gpt-3.5-turbo/model"
             }
         },
         {
@@ -96,16 +68,12 @@
                 "frequency_penalty": 0,
                 "presence_penalty": 0,
                 "stop": null,
-                "api_provider": {
-                    "api_key": "your_openai_api_key",
-                    "api_base": "https://api.openai.com/v1",
-                    "api_type": "openai",
-                    "openrouter_tag": "openai/gpt-4o-mini:free"
-                },
-                "in_memory_provider": {
-                    "model_path": "/path/to/gpt-4/model",
-                    "api_type": "openai"
-                }
+                "api_key": "your_openai_api_key",
+                "api_base": "https://api.openai.com/v1",
+                "api_type": "openai",
+                "openrouter_tag": "openai/gpt-4o-mini:free",
+                "is_in_memory": false,
+                "in_memory_model_path": "/path/to/gpt-4/model"
             }
         },
         {
@@ -120,15 +88,11 @@
                 "frequency_penalty": 0,
                 "presence_penalty": 0,
                 "stop": null,
-                "api_provider": {
-                    "api_key": "your_llama2_api_key",
-                    "api_base": "https://your_llama2_endpoint/",
-                    "api_type": "llama2"
-                },
-                "in_memory_provider": {
-                    "model_path": "/path/to/llama2/model",
-                    "api_type": "llama2"
-                }
+                "api_key": "your_llama2_api_key",
+                "api_base": "https://your_llama2_endpoint/",
+                "api_type": "llama2",
+                "in_memory_model_path": "/path/to/llama2/model",
+                "is_in_memory": false
             }
         },
         {
@@ -143,15 +107,10 @@
                 "frequency_penalty": 0,
                 "presence_penalty": 0,
                 "stop": null,
-                "api_provider": {
-                    "api_key": "your_mistral_api_key",
-                    "api_base": "https://your_mistral_endpoint/",
-                    "api_type": "mistral"
-                },
-                "in_memory_provider": {
-                    "model_path": "/path/to/mistral/model",
-                    "api_type": "mistral"
-                }
+                "api_key": "your_mistral_api_key",
+                "api_base": "https://your_mistral_endpoint/",
+                "api_type": "mistral",
+                "in_memory_model_path": "/path/to/mistral/model"
             }
         },
         {
@@ -166,15 +125,10 @@
                 "frequency_penalty": 0,
                 "presence_penalty": 0,
                 "stop": null,
-                "api_provider": {
-                    "api_key": "your_claude_api_key",
-                    "api_base": "https://your_claude_endpoint/",
-                    "api_type": "claude"
-                },
-                "in_memory_provider": {
-                    "model_path": "/path/to/claude/model",
-                    "api_type": "claude"
-                }
+                "api_key": "your_claude_api_key",
+                "api_base": "https://your_claude_endpoint/",
+                "api_type": "claude",
+                "in_memory_model_path": "/path/to/claude/model"
             }
         },
         {
@@ -189,15 +143,10 @@
                 "frequency_penalty": 0,
                 "presence_penalty": 0,
                 "stop": null,
-                "api_provider": {
-                    "api_key": "your_deepseek_api_key",
-                    "api_base": "https://your_deepseek_endpoint/",
-                    "api_type": "deepseek/deepseek-r1-zero:free"
-                },
-                "in_memory_provider": {
-                    "model_path": "/path/to/deepseek/model",
-                    "api_type": "deepseek"
-                }
+                "api_key": "your_deepseek_api_key",
+                "api_base": "https://your_deepseek_endpoint/",
+                "api_type": "deepseek/deepseek-r1-zero:free",
+                "in_memory_model_path": "/path/to/deepseek/model"
             }
         },
         {
@@ -212,16 +161,11 @@
                 "frequency_penalty": 0,
                 "presence_penalty": 0,
                 "stop": null,
-                "api_provider": {
-                    "api_key": "your_google_api_key",
-                    "api_base": "https://your_google_endpoint/",
-                    "api_type": "google",
-                    "openrouter_tag": "google/gemini-2.0-flash-lite-preview-02-05:free"
-                },
-                "in_memory_provider": {
-                    "model_path": "/path/to/gemini/model",
-                    "api_type": "gemini"
-                }
+                "api_key": "your_google_api_key",
+                "api_base": "https://your_google_endpoint/",
+                "api_type": "google",
+                "openrouter_tag": "google/gemini-2.0-flash-lite-preview-02-05:free",
+                "model_path": "/path/to/gemini/model"
             }
         }
     ]
