--- a/src/llm-dispatch/.env.example
+++ b/src/llm-dispatch/.env.example
@@ -1,3 +1,3 @@
+LLM_DISPATCH_CONFIG=/workspace/AutoPatch-LLM/src/llm-dispatch/config/config.json
 MODEL_ROUTER_API_KEY=CHANGE_ME
-MODEL_ROUTER_BASE_URL='https://openrouter.ai/api/v1'
-LLM_DISPATCH_CONFIG='/workspace/AutoPatch-LLM/src/llm-dispatch/config/simple_config.json
+MODEL_ROUTER_BASE_URL=https://openrouter.ai/api/v1
