--- a/src/code-property-graph-generator/config/config.json
+++ b/src/code-property-graph-generator/config/config.json
@@ -2,6 +2,7 @@
     "version": "0.4.1-alpha",
     "appname": "autopatch.code-property-graph-generator",
     "logging_config" : "config/logging-config.json",
+    "scan_tool_full_path": "/usr/local/bin/jeorn-scan",
     "concurrency_threshold": 10,
     "message_broker_host": "mosquitto",
     "message_broker_port": 1883,
