--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,19 @@
 # this file is intended for interactive development only
 
 services:
-  # autopatchpubsub: # simple echo server for development only
-  #   networks:
-  #     - autopatch-llm_autopatch-docker-network
-  #   build: ./src/autopatchpubsub
-  #   container_name: autopatchpubsub
-  #   working_dir: /app
+  autopatch-code-property-graph-generator:
+    networks:
+      - autopatch-llm_autopatch-docker-network
+    build: ./src/code-property-graph-generator
+    container_name: autopatch-code-property-graph-generator
+    environment:
+      - CPG_SVC_CONFIG=/app/config/config.json
+    volumes:
+      - ./src/code-property-graph-generator/config:/app/config:ro
+      - ./src/code-property-graph-generator/log:/app/log:rw
+      - ./src/code-property-graph-generator/data:/app/data:rw
+      - ./assets/input_codebase:/app/input_codebase:ro
+    working_dir: /app
   autopatch-fuzzing-service:
     networks:
       - autopatch-llm_autopatch-docker-network
@@ -23,7 +30,6 @@ services:
       - ./src/fuzzing-service/config:/app/config:ro
       - ./src/fuzzing-service/log:/app/log:rw
       - ./src/fuzzing-service/data:/app/data:rw
-      - ./bin/afl-2.52b:/app/bin/afl-2.52b:ro
       - ./bin/executables_afl:/app/bin/executables_afl:rw
       - ./assets/input_codebase:/app/input_codebase:ro
       - ./src/fuzzing-service/seed_input:/app/seed_input:ro
