--- a/src/code-property-graph-generator/config/config.json
+++ b/src/code-property-graph-generator/config/config.json
@@ -1,13 +1,13 @@
 {
-    "version": "0.4.1-alpha",
+    "version": "0.5.0-alpha",
     "appname": "autopatch.code-property-graph-generator",
     "logging_config" : "config/logging-config.json",
-    "scan_tool_full_path": "/usr/local/bin/jeorn-scan",
+    "scan_tool_full_path": "/opt/joern/joern-cli/joern-scan",
     "concurrency_threshold": 10,
     "message_broker_host": "mosquitto",
     "message_broker_port": 1883,
     "message_broker_protocol": "mqtt",
-    "cpg_svc_output_topic" : "",
-    "cpg_svc_input_codebase_path" : "/workspace/AutoPatch-LLM/src/code-property-graph-generator/data/dev",
-    "cpg_svc_output_path" : "/workspace/AutoPatch-LLM/src/code-property-graph-generator/data"
+    "cpg_svc_scan_result_output_topic" : "autopatch/cpg-scan-result",
+    "cpg_svc_input_codebase_path" : "/app/input_codebase",
+    "cpg_svc_output_path" : "/app/data"
 }
